overflow-x fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0
+  margin: 0;
 }
 
 :root {
@@ -15,6 +15,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 a {
